--- a/app/views/concerts/_concert.html.erb
+++ b/app/views/concerts/_concert.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag(dom_id(concert)) do %>
 <article class="my-4">
     <div class="grid gap-4 grid-cols-5">
       <div class="col-span-1 text-xl">
@@ -55,4 +56,4 @@
       </div>
     </div>
   </article>
-
+<% end %>
