--- a/app/views/favorites/_list.html.erb
+++ b/app/views/favorites/_list.html.erb
@@ -1,4 +1,4 @@
-<% turbo_frame_tag("favorite-concerts") do %>
+<%= turbo_frame_tag("favorite-concerts") do %>
   <section class="my-4">
     <div class="text-3xl font-bold">Favorite Concerts</div>
     <div class="text-xl font-bold" id="no-favorites">
